--- a/index.html
+++ b/index.html
@@ -1,154 +1,164 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>VCF 2V0-13.25 – Quiz (Full)</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>VCF 2V0-13.25 – Quiz</title>
   <style>
-    :root{
-      --bg:#0b1220; --card:#0f1a2e; --accent:#4f8cff; --ok:#21c07a; --bad:#ff5b5b; --muted:#8aa0c6;
-    }
-    *{box-sizing:border-box;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial}
-    body{margin:0;background:linear-gradient(180deg,#060a16,#0b1220);color:#e9eefc}
-    .wrap{max-width:900px;margin:0 auto;padding:16px}
-    .top{display:flex;gap:8px;flex-wrap:wrap;align-items:center}
-    .pill{background:#0c1630;border:1px solid #162a55;border-radius:999px;padding:6px 10px}
-    .btn{background:#14265a;border:1px solid #203a7a;color:#e9eefc;border-radius:10px;padding:10px 14px;cursor:pointer}
-    .btn.primary{background:linear-gradient(180deg,#2f63ff,#234edb)}
-    .btn.ghost{background:transparent}
+    body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Arial,sans-serif;background:#0b1020;color:#e8eefc;margin:0}
+    header{position:sticky;top:0;background:#0f1630;border-bottom:1px solid #1f2a52;padding:12px 14px;z-index:10}
+    .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
+    .pill{padding:6px 10px;border:1px solid #2a3a72;border-radius:999px;background:#111a38;color:#cfe0ff;font-size:13px}
+    main{padding:14px;max-width:900px;margin:0 auto}
+    .card{background:#0f1430;border:1px solid #1f2a52;border-radius:14px;padding:14px}
+    .qhead{display:flex;justify-content:space-between;gap:10px;align-items:flex-start;margin-bottom:10px}
+    .qnum{font-weight:800}
+    .qtext{margin:8px 0 12px;line-height:1.6}
+    .opt{display:flex;gap:10px;align-items:flex-start;background:#0c1128;border:1px solid #1f2a52;border-radius:12px;padding:10px;margin:10px 0}
+    .opt input{margin-top:4px;transform:scale(1.1)}
+    .btn{background:#1a2636;color:#e9eef5;border:1px solid #2a3a72;border-radius:10px;padding:10px 14px;font-weight:700;cursor:pointer}
     .btn:disabled{opacity:.5;cursor:not-allowed}
-    .card{background:linear-gradient(180deg,#0f1a2e,#0b1730);border:1px solid #162a55;border-radius:16px;padding:16px;margin-top:12px}
-    .qhead{display:flex;justify-content:space-between;gap:8px;align-items:center}
-    .qtitle{font-size:18px;font-weight:700}
-    .info{color:var(--muted);font-size:13px}
-    .opt{display:flex;gap:10px;align-items:flex-start;background:#0b1630;border:1px solid #162a55;border-radius:12px;padding:12px;margin:8px 0;cursor:pointer}
-    .opt input{margin-top:3px}
-    .opt.correct{border-color:#1b6; background:#0f2a1f}
-    .opt.wrong{border-color:#a33; background:#2a1212}
-    .footer{display:flex;justify-content:space-between;gap:8px;flex-wrap:wrap}
-    .explain{display:none;margin-top:8px;color:#cfe1ff}
-    .explain.show{display:block}
-    .center{display:flex;justify-content:center;gap:8px;flex-wrap:wrap}
-    .tag{background:#0b1630;border:1px solid #162a55;border-radius:8px;padding:6px 10px}
+    .bar{display:flex;gap:10px;justify-content:space-between;margin-top:12px;flex-wrap:wrap}
+    .feedback{margin-top:12px;padding:10px;border-radius:12px;border:1px solid #2a3a72;background:#0b1230}
+    .good{border-color:#245c39}
+    .bad{border-color:#6b2b2b}
+    .muted{color:#a9b7d6;font-size:13px}
+    a{color:#9cc3ff}
   </style>
 </head>
 <body>
-<div class="wrap">
-  <div class="top">
-    <div class="pill">VCF 2V0-13.25</div>
-    <div class="pill">السؤال: <span id="idx">1</span>/<span id="total">0</span></div>
-    <div class="pill">الوقت: <span id="time">00:00</span></div>
-    <button class="btn ghost" id="retryWrong">Retry Wrong</button>
-    <button class="btn ghost" id="finish">Finish</button>
-  </div>
-
-  <div class="card">
-    <div class="qhead">
-      <div class="qtitle" id="qtext">—</div>
-      <button class="btn ghost" id="toggleExplain">شرح ℹ️</button>
+  <header>
+    <div class="row">
+      <span class="pill" id="titlePill">VCF 2V0-13.25</span>
+      <span class="pill" id="counterPill">السؤال: 0/0</span>
+      <span class="pill" id="modePill">Choose one</span>
     </div>
-    <div class="info" id="qmeta">Choose multiple</div>
-
-    <div id="options"></div>
-
-    <div class="explain" id="explain"></div>
-
-    <div class="footer">
-      <button class="btn" id="prev">Prev</button>
-      <button class="btn primary" id="next">Next</button>
+    <div class="row" style="margin-top:10px">
+      <button class="btn" id="prevBtn">Prev</button>
+      <button class="btn" id="nextBtn" disabled>Next</button>
+      <button class="btn" id="finishBtn">Finish</button>
+      <span class="muted" id="status"></span>
     </div>
-  </div>
+  </header>
 
-  <div class="center card">
-    <span class="tag">يحسب الوقت فقط – بدون حد</span>
-    <span class="tag">يرجع للأسئلة الغلط</span>
-  </div>
-</div>
+  <main>
+    <div class="card" id="card">
+      <div class="qhead">
+        <div>
+          <div class="qnum" id="qnum">Question</div>
+          <div class="muted" id="qtype"></div>
+        </div>
+      </div>
+      <div class="qtext" id="qtext">تحميل الأسئلة…</div>
+      <div id="opts"></div>
+      <div class="feedback" id="feedback" style="display:none"></div>
+      <div class="bar">
+        <div class="muted" id="hint"></div>
+        <div class="muted">مصدر الأسئلة: <a href="questions.json">questions.json</a></div>
+      </div>
+    </div>
+  </main>
 
 <script>
-/* ==== بنك أسئلة تجريبي (بدّله لاحقًا بالأسئلة الحقيقية) ==== */
-const QUESTIONS = [
-  {
-    text: "Question 1",
-    meta: "Choose multiple",
-    options: [
-      {t:"الخيار A", ok:false},
-      {t:"الخيار B", ok:true},
-      {t:"الخيار C", ok:false},
-      {t:"الخيار D", ok:false},
-    ],
-    explain: "🧩 شرح مختصر للسؤال الأول.\n📌 طريقة التذكّر.\n✅ الجواب: B"
-  },
-  {
-    text: "Question 2",
-    meta: "Choose one",
-    options: [
-      {t:"Option A", ok:true},
-      {t:"Option B", ok:false},
-      {t:"Option C", ok:false},
-    ],
-    explain: "🧩 شرح مختصر.\n📌 تذكّر.\n✅ الجواب: A"
-  }
-];
-/* ============================================================ */
+let QUESTIONS = [];
+let idx = 0;
+let picked = null;
 
-let i=0, wrong=new Set(), start=Date.now(), retryMode=false;
-const $=id=>document.getElementById(id);
-
-function tick(){
-  const s=Math.floor((Date.now()-start)/1000);
-  const m=String(Math.floor(s/60)).padStart(2,'0');
-  const ss=String(s%60).padStart(2,'0');
-  $('time').textContent=`${m}:${ss}`;
-}
-setInterval(tick,1000);
+const el = (id)=>document.getElementById(id);
+const qnum = el("qnum"), qtype = el("qtype"), qtext = el("qtext"), opts = el("opts");
+const counterPill = el("counterPill"), modePill = el("modePill"), feedback = el("feedback");
+const prevBtn = el("prevBtn"), nextBtn = el("nextBtn"), finishBtn = el("finishBtn"), status = el("status"), hint = el("hint");
 
 function render(){
-  const q=QUESTIONS[i];
-  $('idx').textContent=i+1; $('total').textContent=QUESTIONS.length;
-  $('qtext').textContent=q.text; $('qmeta').textContent=q.meta;
-  $('options').innerHTML=''; $('explain').classList.remove('show');
-  $('explain').textContent=q.explain||'';
-  q.options.forEach((o,oi)=>{
-    const d=document.createElement('label');
-    d.className='opt';
-    d.innerHTML=`<input type="checkbox"/> <div>${o.t}</div>`;
-    d.onclick=()=>{
-      const chk=d.querySelector('input');
-      chk.checked=!chk.checked;
-    };
-    $('options').appendChild(d);
+  if(!QUESTIONS.length){
+    qnum.textContent = "No Questions";
+    qtype.textContent = "";
+    qtext.textContent = "ملف questions.json فاضي أو ما انقرأ. افتحه وعدّل الأسئلة.";
+    opts.innerHTML = "";
+    counterPill.textContent = "السؤال: 0/0";
+    modePill.textContent = "-";
+    prevBtn.disabled = true;
+    nextBtn.disabled = true;
+    return;
+  }
+
+  const q = QUESTIONS[idx];
+  picked = null;
+  feedback.style.display = "none";
+  feedback.className = "feedback";
+
+  counterPill.textContent = `السؤال: ${idx+1}/${QUESTIONS.length}`;
+  qnum.textContent = `Question ${idx+1}`;
+  qtype.textContent = q.type || "Choose one";
+  modePill.textContent = q.type || "Choose one";
+  qtext.textContent = q.q || "(بدون نص سؤال)";
+
+  opts.innerHTML = "";
+  (q.choices || []).forEach((c, i)=>{
+    const wrap = document.createElement("label");
+    wrap.className = "opt";
+    const input = document.createElement("input");
+    input.type = (q.type && q.type.toLowerCase().includes("multiple")) ? "checkbox" : "radio";
+    input.name = "choice";
+    input.value = i;
+    input.addEventListener("change", ()=>{
+      if(input.type === "radio"){
+        picked = [i];
+      } else {
+        // checkboxes
+        const chosen = [...opts.querySelectorAll("input[type=checkbox]:checked")].map(x=>Number(x.value));
+        picked = chosen;
+      }
+      nextBtn.disabled = !picked || picked.length===0;
+    });
+
+    const span = document.createElement("div");
+    span.textContent = c || "(خيار فاضي)";
+    wrap.appendChild(input);
+    wrap.appendChild(span);
+    opts.appendChild(wrap);
   });
+
+  prevBtn.disabled = idx===0;
+  nextBtn.disabled = true;
+  hint.textContent = "اختر إجابة ثم اضغط Next للتصحيح.";
 }
-render();
 
-$('toggleExplain').onclick=()=> $('explain').classList.toggle('show');
+function sameSet(a,b){
+  if(!Array.isArray(a) || !Array.isArray(b)) return false;
+  const aa = [...a].sort((x,y)=>x-y);
+  const bb = [...b].sort((x,y)=>x-y);
+  return aa.length===bb.length && aa.every((v,i)=>v===bb[i]);
+}
 
-$('next').onclick=()=>{
-  const q=QUESTIONS[i];
-  const opts=[...$('options').children];
-  let ok=true;
-  opts.forEach((d,oi)=>{
-    const chosen=d.querySelector('input').checked;
-    if(chosen!==q.options[oi].ok){ ok=false; }
-    d.classList.toggle('correct', q.options[oi].ok);
-    d.classList.toggle('wrong', chosen && !q.options[oi].ok);
-  });
-  if(!ok) wrong.add(i); else wrong.delete(i);
-  setTimeout(()=>{
-    if(i<QUESTIONS.length-1){ i++; render(); }
-  },600);
-};
+function grade(){
+  const q = QUESTIONS[idx];
+  const ans = Array.isArray(q.answer) ? q.answer : [q.answer];
+  const ok = sameSet(picked||[], ans);
 
-$('prev').onclick=()=>{ if(i>0){ i--; render(); } };
+  feedback.style.display = "block";
+  feedback.classList.add(ok ? "good" : "bad");
+  const correctText = ans.map(i => (q.choices && q.choices[i]) ? q.choices[i] : `#${i}`).join(" | ");
+  const expl = q.explain ? `<div style="margin-top:8px" class="muted">${q.explain}</div>` : "";
+  feedback.innerHTML = (ok ? "✅ صحيح" : "❌ خطأ") + `<div class="muted" style="margin-top:6px">الصحيح: ${correctText}</div>` + expl;
+}
 
-$('retryWrong').onclick=()=>{
-  if(!wrong.size) return alert('ما فيه أسئلة غلط');
-  QUESTIONS.splice(0, QUESTIONS.length, ...[...wrong].map(x=>QUESTIONS[x]));
-  wrong.clear(); i=0; retryMode=true; render();
-};
+prevBtn.onclick = ()=>{ if(idx>0){ idx--; render(); } };
+nextBtn.onclick = ()=>{ grade(); if(idx < QUESTIONS.length-1){ idx++; setTimeout(render, 350); } };
+finishBtn.onclick = ()=>{ status.textContent = "خلصت."; };
 
-$('finish').onclick=()=> alert('انتهى الاختبار');
+(async function init(){
+  try{
+    const res = await fetch("questions.json", {cache:"no-store"});
+    QUESTIONS = await res.json();
+    if(!Array.isArray(QUESTIONS)) QUESTIONS = [];
+    status.textContent = "";
+  }catch(e){
+    QUESTIONS = [];
+    status.textContent = "ما قدرت أقرأ questions.json";
+  }
+  render();
+})();
 </script>
 </body>
 </html>
