--- a/index.html
+++ b/index.html
@@ -3,162 +3,356 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>VCF 2V0-13.25 – Quiz</title>
+  <title>VCF Quiz</title>
   <style>
-    body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Arial,sans-serif;background:#0b1020;color:#e8eefc;margin:0}
-    header{position:sticky;top:0;background:#0f1630;border-bottom:1px solid #1f2a52;padding:12px 14px;z-index:10}
-    .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
-    .pill{padding:6px 10px;border:1px solid #2a3a72;border-radius:999px;background:#111a38;color:#cfe0ff;font-size:13px}
-    main{padding:14px;max-width:900px;margin:0 auto}
-    .card{background:#0f1430;border:1px solid #1f2a52;border-radius:14px;padding:14px}
-    .qhead{display:flex;justify-content:space-between;gap:10px;align-items:flex-start;margin-bottom:10px}
-    .qnum{font-weight:800}
-    .qtext{margin:8px 0 12px;line-height:1.6}
-    .opt{display:flex;gap:10px;align-items:flex-start;background:#0c1128;border:1px solid #1f2a52;border-radius:12px;padding:10px;margin:10px 0}
-    .opt input{margin-top:4px;transform:scale(1.1)}
-    .btn{background:#1a2636;color:#e9eef5;border:1px solid #2a3a72;border-radius:10px;padding:10px 14px;font-weight:700;cursor:pointer}
-    .btn:disabled{opacity:.5;cursor:not-allowed}
-    .bar{display:flex;gap:10px;justify-content:space-between;margin-top:12px;flex-wrap:wrap}
-    .feedback{margin-top:12px;padding:10px;border-radius:12px;border:1px solid #2a3a72;background:#0b1230}
-    .good{border-color:#245c39}
-    .bad{border-color:#6b2b2b}
-    .muted{color:#a9b7d6;font-size:13px}
-    a{color:#9cc3ff}
+    :root{
+      --bg:#07101f; --panel:#0b1730; --card:#0f1f3f;
+      --text:#eaf0ff; --muted:#9bb0d0; --line:rgba(255,255,255,.12);
+      --ok:#22c55e; --bad:#ef4444; --warn:#f59e0b;
+      --btn:#142a55;
+    }
+    *{box-sizing:border-box}
+    body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Arial,sans-serif;background:linear-gradient(180deg,#050b16, #07101f 30%, #07101f);color:var(--text)}
+    header{position:sticky;top:0;z-index:10;background:rgba(7,16,31,.9);backdrop-filter: blur(10px);border-bottom:1px solid var(--line)}
+    .wrap{max-width:920px;margin:0 auto;padding:14px}
+    .toprow{display:flex;gap:10px;flex-wrap:wrap;align-items:center;justify-content:space-between}
+    .pills{display:flex;gap:8px;flex-wrap:wrap;align-items:center}
+    .pill{padding:6px 10px;border:1px solid var(--line);background:rgba(255,255,255,.04);border-radius:999px;color:var(--text);font-size:13px}
+    .pill strong{color:#fff}
+    .btnrow{display:flex;gap:8px;flex-wrap:wrap}
+    button{
+      background:var(--btn);color:var(--text);border:1px solid var(--line);
+      padding:10px 14px;border-radius:12px;font-size:14px;cursor:pointer
+    }
+    button:disabled{opacity:.45;cursor:not-allowed}
+    main{max-width:920px;margin:0 auto;padding:16px 14px 70px}
+    .card{
+      background:linear-gradient(180deg,rgba(255,255,255,.05),rgba(255,255,255,.02));
+      border:1px solid var(--line);border-radius:18px;padding:18px
+    }
+    .qhead{display:flex;justify-content:space-between;gap:12px;align-items:flex-start;margin-bottom:12px}
+    .qtitle{font-size:18px;font-weight:800;margin:0}
+    .qmeta{color:var(--muted);font-size:13px}
+    .opts{display:flex;flex-direction:column;gap:10px;margin:14px 0 10px}
+    .opt{
+      border:1px solid var(--line);background:rgba(255,255,255,.03);
+      padding:12px 12px;border-radius:14px;display:flex;gap:10px;align-items:center
+    }
+    .opt input{width:20px;height:20px}
+    .opt span{line-height:1.5}
+    .feedback{
+      margin-top:12px;border-radius:14px;padding:12px;border:1px solid var(--line);
+      background:rgba(255,255,255,.03);display:none
+    }
+    .feedback.ok{border-color:rgba(34,197,94,.55);background:rgba(34,197,94,.08)}
+    .feedback.bad{border-color:rgba(239,68,68,.55);background:rgba(239,68,68,.08)}
+    .feedback.warn{border-color:rgba(245,158,11,.55);background:rgba(245,158,11,.08)}
+    .feedback .title{font-weight:900;margin-bottom:6px;display:flex;gap:8px;align-items:center}
+    .small{font-size:13px;color:var(--muted);margin-top:10px}
+    .footerbar{
+      position:fixed;left:0;right:0;bottom:0;background:rgba(7,16,31,.92);
+      backdrop-filter: blur(10px);border-top:1px solid var(--line)
+    }
+    .footerbar .wrap{display:flex;gap:10px;align-items:center;justify-content:space-between}
+    a{color:#9bd2ff}
+    .linkrow{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
   </style>
 </head>
-<body>
-  <header>
-    <div class="row">
-      <span class="pill" id="titlePill">VCF 2V0-13.25</span>
-      <span class="pill" id="counterPill">السؤال: 0/0</span>
-      <span class="pill" id="modePill">Choose one</span>
-    </div>
-    <div class="row" style="margin-top:10px">
-      <button class="btn" id="prevBtn">Prev</button>
-      <button class="btn" id="nextBtn" disabled>Next</button>
-      <button class="btn" id="finishBtn">Finish</button>
-      <span class="muted" id="status"></span>
-    </div>
-  </header>
 
-  <main>
-    <div class="card" id="card">
-      <div class="qhead">
-        <div>
-          <div class="qnum" id="qnum">Question</div>
-          <div class="muted" id="qtype"></div>
-        </div>
+<body>
+<header>
+  <div class="wrap">
+    <div class="toprow">
+      <div class="pills">
+        <div class="pill"><strong id="modePill">-</strong></div>
+        <div class="pill">السؤال: <strong id="posPill">0/0</strong></div>
+        <div class="pill">صح: <strong id="okPill">0</strong></div>
+        <div class="pill">خطأ: <strong id="badPill">0</strong></div>
       </div>
-      <div class="qtext" id="qtext">تحميل الأسئلة…</div>
-      <div id="opts"></div>
-      <div class="feedback" id="feedback" style="display:none"></div>
-      <div class="bar">
-        <div class="muted" id="hint"></div>
-        <div class="muted">مصدر الأسئلة: <a href="questions.json">questions.json</a></div>
+      <div class="btnrow">
+        <button id="shuffleBtn">Shuffle</button>
+        <button id="resetBtn">Reset</button>
       </div>
     </div>
-  </main>
+  </div>
+</header>
+
+<main>
+  <div class="card">
+    <div class="qhead">
+      <div>
+        <div class="qmeta" id="qType">-</div>
+        <h1 class="qtitle" id="qText">جاري التحميل…</h1>
+      </div>
+      <div class="qmeta" id="qIndex">Question -</div>
+    </div>
+
+    <div class="opts" id="options"></div>
+
+    <div class="feedback" id="feedback">
+      <div class="title" id="fbTitle">-</div>
+      <div id="fbBody">-</div>
+    </div>
+
+    <div class="small">
+      مصدر الأسئلة: <a href="./questions.json" target="_blank" rel="noopener">questions.json</a>
+    </div>
+  </div>
+</main>
+
+<div class="footerbar">
+  <div class="wrap">
+    <div class="linkrow">
+      <button id="prevBtn">Prev</button>
+      <button id="nextBtn">Next</button>
+      <button id="finishBtn">Finish</button>
+    </div>
+    <div class="qmeta" id="hint">اختَر إجابة ثم اضغط Next. (يسمح بالتقدم حتى لو خطأ)</div>
+  </div>
+</div>
 
 <script>
-let QUESTIONS = [];
-let idx = 0;
-let picked = null;
+  // ====== إعدادات ======
+  const QUESTIONS_URL = "./questions.json";
+  const SHUFFLE_ON_LOAD = true;
 
-const el = (id)=>document.getElementById(id);
-const qnum = el("qnum"), qtype = el("qtype"), qtext = el("qtext"), opts = el("opts");
-const counterPill = el("counterPill"), modePill = el("modePill"), feedback = el("feedback");
-const prevBtn = el("prevBtn"), nextBtn = el("nextBtn"), finishBtn = el("finishBtn"), status = el("status"), hint = el("hint");
+  // ====== عناصر ======
+  const modePill = document.getElementById("modePill");
+  const posPill  = document.getElementById("posPill");
+  const okPill   = document.getElementById("okPill");
+  const badPill  = document.getElementById("badPill");
 
-function render(){
-  if(!QUESTIONS.length){
-    qnum.textContent = "No Questions";
-    qtype.textContent = "";
-    qtext.textContent = "ملف questions.json فاضي أو ما انقرأ. افتحه وعدّل الأسئلة.";
-    opts.innerHTML = "";
-    counterPill.textContent = "السؤال: 0/0";
-    modePill.textContent = "-";
-    prevBtn.disabled = true;
-    nextBtn.disabled = true;
-    return;
+  const qTypeEl  = document.getElementById("qType");
+  const qTextEl  = document.getElementById("qText");
+  const qIndexEl = document.getElementById("qIndex");
+  const optionsEl= document.getElementById("options");
+
+  const feedbackEl = document.getElementById("feedback");
+  const fbTitleEl  = document.getElementById("fbTitle");
+  const fbBodyEl   = document.getElementById("fbBody");
+
+  const prevBtn = document.getElementById("prevBtn");
+  const nextBtn = document.getElementById("nextBtn");
+  const finishBtn = document.getElementById("finishBtn");
+  const shuffleBtn = document.getElementById("shuffleBtn");
+  const resetBtn = document.getElementById("resetBtn");
+
+  // ====== حالة ======
+  let allQuestions = [];
+  let order = [];            // ترتيب الأسئلة (أرقام)
+  let i = 0;                 // مؤشر السؤال الحالي داخل order
+  let stats = { ok:0, bad:0 };
+  let answered = [];         // لتتبع إذا تم احتساب السؤال حتى لا ينحسب مرتين
+
+  // ====== أدوات ======
+  function shuffleArray(arr){
+    for(let k=arr.length-1; k>0; k--){
+      const r = Math.floor(Math.random()*(k+1));
+      [arr[k], arr[r]] = [arr[r], arr[k]];
+    }
+    return arr;
   }
 
-  const q = QUESTIONS[idx];
-  picked = null;
-  feedback.style.display = "none";
-  feedback.className = "feedback";
+  function normalizeType(t){
+    // يقبل: single / multiple / Choose one / Choose multiple / Choose one (…)
+    if(!t) return "single";
+    const s = String(t).toLowerCase();
+    if(s.includes("multiple")) return "multiple";
+    if(s.includes("single")) return "single";
+    if(s.includes("choose one")) return "single";
+    if(s.includes("choose multiple")) return "multiple";
+    return s.trim();
+  }
 
-  counterPill.textContent = `السؤال: ${idx+1}/${QUESTIONS.length}`;
-  qnum.textContent = `Question ${idx+1}`;
-  qtype.textContent = q.type || "Choose one";
-  modePill.textContent = q.type || "Choose one";
-  qtext.textContent = q.q || "(بدون نص سؤال)";
+  function toArrayAnswer(ans){
+    // يقبل: رقم / [أرقام] / "A" … الخ (لكن الأفضل أرقام)
+    if(Array.isArray(ans)) return ans.map(Number);
+    if(ans === 0 || ans) return [Number(ans)];
+    return [];
+  }
 
-  opts.innerHTML = "";
-  (q.choices || []).forEach((c, i)=>{
-    const wrap = document.createElement("label");
-    wrap.className = "opt";
-    const input = document.createElement("input");
-    input.type = (q.type && q.type.toLowerCase().includes("multiple")) ? "checkbox" : "radio";
-    input.name = "choice";
-    input.value = i;
-    input.addEventListener("change", ()=>{
-      if(input.type === "radio"){
-        picked = [i];
-      } else {
-        // checkboxes
-        const chosen = [...opts.querySelectorAll("input[type=checkbox]:checked")].map(x=>Number(x.value));
-        picked = chosen;
-      }
-      nextBtn.disabled = !picked || picked.length===0;
+  function getCurrent(){
+    const q = allQuestions[ order[i] ];
+    const type = normalizeType(q.type);
+    const choices = q.choices || [];
+    const answer = toArrayAnswer(q.answer);
+    const explain = q.explain || "";
+    const text = q.q || q.question || q.text || "";
+    return { q, type, choices, answer, explain, text };
+  }
+
+  function setFeedback(kind, title, bodyHtml){
+    feedbackEl.classList.remove("ok","bad","warn");
+    feedbackEl.classList.add(kind);
+    fbTitleEl.textContent = title;
+    fbBodyEl.innerHTML = bodyHtml;
+    feedbackEl.style.display = "block";
+  }
+
+  function hideFeedback(){
+    feedbackEl.style.display = "none";
+  }
+
+  function getSelectedIndices(type){
+    const inputs = [...optionsEl.querySelectorAll("input[name='opt']")];
+    if(type === "single"){
+      const idx = inputs.findIndex(x => x.checked);
+      return idx >= 0 ? [idx] : [];
+    }else{
+      const idxs = inputs.map((x,idx)=> x.checked ? idx : -1).filter(x=>x>=0);
+      return idxs;
+    }
+  }
+
+  function sameSet(a,b){
+    if(a.length !== b.length) return false;
+    const A=[...a].sort((x,y)=>x-y);
+    const B=[...b].sort((x,y)=>x-y);
+    return A.every((v,ix)=> v===B[ix]);
+  }
+
+  function correctText(choices, answerIdxs){
+    return answerIdxs.map(ix => choices[ix]).filter(Boolean).join(" | ");
+  }
+
+  // ====== رسم السؤال ======
+  function render(){
+    if(!allQuestions.length){
+      qTextEl.textContent = "لا يوجد أسئلة. تأكد أن questions.json موجود وصحيح.";
+      optionsEl.innerHTML = "";
+      prevBtn.disabled = true;
+      nextBtn.disabled = true;
+      finishBtn.disabled = true;
+      return;
+    }
+
+    const { type, choices, text } = getCurrent();
+
+    modePill.textContent = type;
+    posPill.textContent = `${i+1}/${order.length}`;
+    okPill.textContent = stats.ok;
+    badPill.textContent = stats.bad;
+
+    qTypeEl.textContent = type;
+    qIndexEl.textContent = `Question ${i+1}`;
+    qTextEl.textContent = text || `Question ${i+1}`;
+
+    // خيارات
+    optionsEl.innerHTML = "";
+    const inputType = (type === "single") ? "radio" : "checkbox";
+
+    choices.forEach((c, idx) => {
+      const row = document.createElement("label");
+      row.className = "opt";
+      row.innerHTML = `
+        <input type="${inputType}" name="opt" value="${idx}" />
+        <span>${c}</span>
+      `;
+      optionsEl.appendChild(row);
     });
 
-    const span = document.createElement("div");
-    span.textContent = c || "(خيار فاضي)";
-    wrap.appendChild(input);
-    wrap.appendChild(span);
-    opts.appendChild(wrap);
+    hideFeedback();
+
+    prevBtn.disabled = (i === 0);
+    nextBtn.disabled = (i === order.length - 1);
+  }
+
+  // ====== تحكم ======
+  nextBtn.addEventListener("click", () => {
+    const { type, choices, answer, explain } = getCurrent();
+    const selected = getSelectedIndices(type);
+
+    if(selected.length === 0){
+      setFeedback("warn","تنبيه","اختر إجابة أولاً ثم اضغط Next.");
+      return;
+    }
+
+    const ok = sameSet(selected, answer);
+
+    // احتساب مرة واحدة فقط لكل سؤال
+    if(!answered[order[i]]){
+      answered[order[i]] = true;
+      if(ok) stats.ok++; else stats.bad++;
+      okPill.textContent = stats.ok;
+      badPill.textContent = stats.bad;
+    }
+
+    const correctAnsText = correctText(choices, answer) || "(غير محدد)";
+    const explainHtml = explain ? `<div style="margin-top:8px;color:var(--muted)">${explain}</div>` : "";
+
+    if(ok){
+      setFeedback("ok","✅ صحيح",`الصحيح: <strong>${correctAnsText}</strong>${explainHtml}`);
+    }else{
+      setFeedback("bad","❌ خطأ",`الصحيح: <strong>${correctAnsText}</strong>${explainHtml}`);
+    }
+
+    // >>> هذا أهم سطر: يكمل للسؤال اللي بعده حتى لو غلط
+    if(i < order.length - 1){
+      i++;
+      setTimeout(render, 250); // مهلة بسيطة عشان تشوف صح/خطأ
+    }
   });
 
-  prevBtn.disabled = idx===0;
-  nextBtn.disabled = true;
-  hint.textContent = "اختر إجابة ثم اضغط Next للتصحيح.";
-}
+  prevBtn.addEventListener("click", () => {
+    if(i>0){ i--; render(); }
+  });
 
-function sameSet(a,b){
-  if(!Array.isArray(a) || !Array.isArray(b)) return false;
-  const aa = [...a].sort((x,y)=>x-y);
-  const bb = [...b].sort((x,y)=>x-y);
-  return aa.length===bb.length && aa.every((v,i)=>v===bb[i]);
-}
+  finishBtn.addEventListener("click", () => {
+    setFeedback("ok","النتيجة",
+      `خلصت.<br>✅ صح: <strong>${stats.ok}</strong><br>❌ خطأ: <strong>${stats.bad}</strong>`
+    );
+  });
 
-function grade(){
-  const q = QUESTIONS[idx];
-  const ans = Array.isArray(q.answer) ? q.answer : [q.answer];
-  const ok = sameSet(picked||[], ans);
+  shuffleBtn.addEventListener("click", () => {
+    order = shuffleArray(order);
+    i = 0;
+    stats = { ok:0, bad:0 };
+    answered = [];
+    render();
+  });
 
-  feedback.style.display = "block";
-  feedback.classList.add(ok ? "good" : "bad");
-  const correctText = ans.map(i => (q.choices && q.choices[i]) ? q.choices[i] : `#${i}`).join(" | ");
-  const expl = q.explain ? `<div style="margin-top:8px" class="muted">${q.explain}</div>` : "";
-  feedback.innerHTML = (ok ? "✅ صحيح" : "❌ خطأ") + `<div class="muted" style="margin-top:6px">الصحيح: ${correctText}</div>` + expl;
-}
+  resetBtn.addEventListener("click", () => {
+    i = 0;
+    stats = { ok:0, bad:0 };
+    answered = [];
+    render();
+  });
 
-prevBtn.onclick = ()=>{ if(idx>0){ idx--; render(); } };
-nextBtn.onclick = ()=>{ grade(); if(idx < QUESTIONS.length-1){ idx++; setTimeout(render, 350); } };
-finishBtn.onclick = ()=>{ status.textContent = "خلصت."; };
+  // ====== تحميل الأسئلة ======
+  async function load(){
+    try{
+      const res = await fetch(QUESTIONS_URL, { cache: "no-store" });
+      if(!res.ok) throw new Error("HTTP " + res.status);
+      const data = await res.json();
 
-(async function init(){
-  try{
-    const res = await fetch("questions.json", {cache:"no-store"});
-    QUESTIONS = await res.json();
-    if(!Array.isArray(QUESTIONS)) QUESTIONS = [];
-    status.textContent = "";
-  }catch(e){
-    QUESTIONS = [];
-    status.textContent = "ما قدرت أقرأ questions.json";
+      if(!Array.isArray(data)) throw new Error("questions.json لازم يكون Array []");
+
+      allQuestions = data.map(q => ({
+        type: q.type,
+        q: q.q,
+        choices: q.choices,
+        answer: q.answer,
+        explain: q.explain
+      }));
+
+      order = allQuestions.map((_,idx)=>idx);
+      if(SHUFFLE_ON_LOAD) shuffleArray(order);
+
+      i = 0;
+      stats = { ok:0, bad:0 };
+      answered = [];
+      render();
+    }catch(e){
+      qTextEl.textContent = "ما قدرت أقرأ questions.json. تأكد إنه موجود وصحيح.";
+      optionsEl.innerHTML = "";
+      setFeedback("bad","خطأ تحميل", String(e));
+      prevBtn.disabled = true;
+      nextBtn.disabled = true;
+      finishBtn.disabled = true;
+    }
   }
-  render();
-})();
+
+  load();
 </script>
 </body>
 </html>
